@@ -56,17 +56,19 @@
 
 #ifdef FRSKY	
 
-#define AUDIO_FRSKY_TONE1 (0)
-#define AUDIO_FRSKY_TONE2 (1)
-#define AUDIO_FRSKY_TONE3 (2)
-#define AUDIO_FRSKY_TONE4 (3)
-#define AUDIO_FRSKY_TONE5 (4)
-#define AUDIO_FRSKY_HTONE1 (5)
-#define AUDIO_FRSKY_HTONE2 (6)
-#define AUDIO_FRSKY_HTONE3 (7)
-#define AUDIO_FRSKY_HTONE4 (8)
-#define AUDIO_FRSKY_HTONE5 (9)
-
+#define AUDIO_FRSKY_WARN1 (0)
+#define AUDIO_FRSKY_WARN2 (1)
+#define AUDIO_FRSKY_CHEEP (2)
+#define AUDIO_FRSKY_RING (3)
+#define AUDIO_FRSKY_SCIFI (4)
+#define AUDIO_FRSKY_ROBOT (5)
+#define AUDIO_FRSKY_CHIRP (6)
+#define AUDIO_FRSKY_TADA (7)
+#define AUDIO_FRSKY_CRICKET (8)
+#define AUDIO_FRSKY_SIREN (9)
+#define AUDIO_FRSKY_ALARMC (10)
+#define AUDIO_FRSKY_RATATA (11)
+#define AUDIO_FRSKY_TICK (12)
 #endif
 
 
